# OUR_6DoFs

./: README.md
our_basic/: CMakeLists.txt  package.xml
our_basic/cmake/: FindOUR_API.cmake
our_model/: manifest.xml  manifest.xml~
our_model/launch/: display.launch  display.launch~  gazebo.launch
our_model/meshes/: base.STL  link1.STL  link10.STL  link10_1.STL  link11.STL  link12.STL  link1_1.STL  link2.STL  link2_1.STL  link3.STL  link4.STL  link5.STL  link6.STL  link6_1.STL  link7.STL  link8.STL  link8_1.STL  link9.STL  link9_1.STL
our_model/robots/: OUR-II.URDF~  OUR-II.dae  OUR-II_rounded.dae  mm .URDF~  mm.URDF~
our_moveit_config/: CMakeLists.txt  package.xml
our_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_names.yaml  ompl_planning.yaml  our_model.srdf
our_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  our_model_moveit_controller_manager.launch.xml  our_moveit_controller_manager.launch  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  (+4 more)
our_robot/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme  readme~
our_robot/kdl_rviz/: CMakeLists.txt~
our_robot/kdl_rviz/launch/: kdl_rviz.launch~
our_robot/kdl_rviz/src/: kdl_rviz.cpp  kdl_rviz.cpp~  our_kdl_rviz.cpp~
our_robot/qt_publish/: CMakeLists.txt  CMakeLists.txt~  readme
our_robot/qt_publish/src/: CMakeLists.txt~  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h~
our_robot/rviz_subscribe/: CMakeLists.txt  CMakeLists.txt~  readme
our_robot/rviz_subscribe/lanuch/: rviz_subscribe.launch~
our_robot/rviz_subscribe/src/: config.h  rviz_subscribe.cpp
our_robot/sub_jointState_pub_moveJ_6/: CMakeLists.txt  CMakeLists.txt~  readme~
our_robot/sub_jointState_pub_moveJ_6/src/: CMakeLists.txt~  rviz_subscribe.cpp~  sub_jointState_pub_moveJ_6.cpp
(+18 files in other folders)
